{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 311,
  "lineage": "f8e95cf3-f074-573a-1cc2-8551ab2e562f",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:690248313330:loadbalancer/app/IT-dev-vpc-alb/6be736735f6266ff",
            "arn_suffix": "app/IT-dev-vpc-alb/6be736735f6266ff",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "IT-dev-vpc-alb-585429148.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": true,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": true,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:690248313330:loadbalancer/app/IT-dev-vpc-alb/6be736735f6266ff",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "IT-dev-vpc-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-07364ac8d25375cf7",
              "sg-0ae097d93970a68a9"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-023b6938d01f2f669"
              },
              {
                "subnet_id": "subnet-08287c5345ab9661d"
              }
            ],
            "subnets": [
              "subnet-023b6938d01f2f669",
              "subnet-08287c5345ab9661d"
            ],
            "tags": {
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "terraform-aws-modules": "alb"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-00659d92455c31737",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.alb.aws_security_group.this",
            "module.alb_sg.aws_security_group.this",
            "module.alb_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690248313330:security-group/sg-07364ac8d25375cf7",
            "description": "Security group for IT-dev-vpc-alb application load balancer",
            "egress": [],
            "id": "sg-07364ac8d25375cf7",
            "ingress": [],
            "name": "IT-dev-vpc-alb-20250428212918756000000004",
            "name_prefix": "IT-dev-vpc-alb-",
            "owner_id": "690248313330",
            "revoke_rules_on_delete": false,
            "tags": {
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "terraform-aws-modules": "alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-00659d92455c31737"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690248313330:security-group/sg-0ae097d93970a68a9",
            "description": "Security group open to the world for load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ae097d93970a68a9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP 81 - Allow from Internet",
                "from_port": 81,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 81
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "loadbalancer_sg-20250428212919096200000006",
            "name_prefix": "loadbalancer_sg-",
            "owner_id": "690248313330",
            "revoke_rules_on_delete": false,
            "tags": {
              "Department": "IT",
              "Environment": "dev",
              "Name": "IT-dev-vpc"
            },
            "tags_all": {
              "Department": "IT",
              "Environment": "dev",
              "Name": "IT-dev-vpc"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-00659d92455c31737"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690248313330:internet-gateway/igw-010d2b44f4c963d07",
            "id": "igw-010d2b44f4c963d07",
            "owner_id": "690248313330",
            "tags": {
              "Name": "IT-dev-vpc-my_test_VPC"
            },
            "tags_all": {
              "Name": "IT-dev-vpc-my_test_VPC"
            },
            "vpc_id": "vpc-00659d92455c31737"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690248313330:subnet/subnet-023b6938d01f2f669",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-023b6938d01f2f669",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "690248313330",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my_public_subnet"
            },
            "tags_all": {
              "Name": "my_public_subnet"
            },
            "vpc_id": "vpc-00659d92455c31737"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690248313330:subnet/subnet-08287c5345ab9661d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08287c5345ab9661d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "690248313330",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my_public_subnet"
            },
            "tags_all": {
              "Name": "my_public_subnet"
            },
            "vpc_id": "vpc-00659d92455c31737"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690248313330:vpc/vpc-00659d92455c31737",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04e0fc644ed5f7f24",
            "default_route_table_id": "rtb-01e0ec4e7a3479434",
            "default_security_group_id": "sg-0425b4702b091dc55",
            "dhcp_options_id": "dopt-0d229ad7ffd0a5ec3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00659d92455c31737",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01e0ec4e7a3479434",
            "owner_id": "690248313330",
            "tags": {
              "Name": "my_vpc_practise",
              "environment": "dev",
              "owner": "Gopi"
            },
            "tags_all": {
              "Name": "my_vpc_practise",
              "environment": "dev",
              "owner": "Gopi"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}